Changed CSS property to "white-space: nowrap;" to avoid multi-line shortcut titles.

--- a/data/about.css
+++ b/data/about.css
@@ -110,7 +110,7 @@ button {
     color: #222222;
     text-align: center;
     text-overflow: ellipsis;
-    word-wrap: nowrap;
+    white-space: nowrap;
     height: 20%;
     line-height: 1em;
     overflow: hidden;
